<resources>
    <string name="app_name">FoodApp</string>

    <string name="action_settings">Settings</string>
    <string name="user_decision_hint">Please select an option</string>
    <string name="user_location_hint">Where are you?</string>
    <string name="nearby_button_text">Nearby</string>
    <string name="takeout_button_text">Takeout</string>
    <string name="delivery_button_text">Delivery</string>
    <string name="indecisive_button_text">Can\'t Decide</string>
    <string name="recommend_button_text">Recommend</string>
    <string name="toast_text">Update Google Play services</string>
</resources>
